[package]
name = "rknpu-starry-adapter"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
rknpu = { path = "../RKNPU" }
rdrive = "0.19.1"
rockchip-pm = { git = "https://github.com/drivercraft/rockchip-pm.git" }
axklib = { git = "https://github.com/arceos-hypervisor/axklib.git" }
axerrno = "0.2"
axfs-ng-vfs = "0.1"
axhal = { workspace = true, features = ["uspace"] }

event-listener = { version = "5.4.0", default-features = false }
lazy_static = { version = "1.5", features = ["spin_no_std"] }
memory_addr = "0.4"
starry-kernel = { path = "../../kernel"}

[target.'cfg(target_arch = "aarch64")'.dependencies]
axtask = { workspace = true, features = ["multitask"] }
